# lambda-efs-sqlite

./: .gitignore  README.md  Taskfile.yml  create-layer.sh  lambda.py  main.tf  pyproject.toml  services.tf  test.sh
.github/actions/update-source/: action.yml
.github/workflows/: nodejs-source.yml  python-layer.yml  python-source.yml  upload-layer.yml
lambda/: main.py
modules/apigw/: main.tf
modules/apigw-deployment/: main.tf
modules/apigw-domain/: main.tf
modules/apigw-lambda-proxy/: main.tf
modules/iam-role/: main.tf
modules/lambda/: main.tf  output.tf  vars.tf
nodejs/: biome.jsonc  build.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
nodejs/src/: app.ts  hello.test.ts  hello.ts  index.ts
python/: pyproject.toml
python/src/: app.py  server.py
python/src/handlers/: create_post.py  create_user.py  get_posts.py  get_users.py  list_posts.py  list_users.py  retrieve_post.py  retrieve_user.py
python/src/iservices/: __init__.py  post_repo.py  user_repo.py
python/src/iusecases/: create_post.py  create_user.py  get_users.py  list_posts.py  retrieve_post.py  retrieve_user.py
python/src/services/: __init__.py  post_repo.py  schema.py  user_repo.py
python/src/usecases/: create_post.py  create_user.py  get_posts.py  get_users.py  list_posts.py  list_users.py  retrieve_post.py  retrieve_user.py
services/apigw/: main.tf
services/lambda/: main.tf
services/network/: main.tf
src/: app.py  ent.py  lambda.py  repo.py
terraform/: main.tf  moved.tf  removed.tf  services.tf
terraform/modules/apigw/: main.tf
terraform/modules/apigw-domain/: main.tf
terraform/modules/lambda/: main.tf  vars.tf
terraform/services/apigw/: main.tf
terraform/services/gha/: main.tf
(+6 files in other folders)
